--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="congrats_you_have_completed_the_task_successfully">Congrats!... You have completed the task successfully..</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="reminder">Reminder</string>
+    <string name="diary">Diary</string>
+    <string name="calendar">Calendar</string>
 </resources>
